[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "sdksio-whatsapp-cloud-api-sdk"
description = "Use cloud-hosted version of the WhatsApp Business API to send and receive messages"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["whatsapp", "messages", "api", "whatsapp-api", "whatsapp-sdk", "chat-sdk"]
authors = [{name = "developer-sdksio", email = "developer+sdksio@apimatic.io"}]
urls = {Documentation = "https://www.apimatic.io/apidocs/whatsapp-api/v/1_0#/python"}
dependencies = ["apimatic-core~=0.2.0", "apimatic-core-interfaces~=0.1.0", "apimatic-requests-client-adapter~=0.1.0", "python-dateutil~=2.8.1", "enum34~=1.1, >=1.1.10"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
